--- a/_includes/baseLayout.liquid
+++ b/_includes/baseLayout.liquid
@@ -6,19 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Mike Schreiber</title>
-    <meta name="description" content="Mike Schreiber's Page">
+    <meta name="description" content="Mike Schreiber">
     <meta name="author" content="Mike Schreiber">
 
-    <meta property="og:title" content="Mike Schreiber's Page">
+    <meta property="og:title" content="Mike Schreiber">
     <meta property="og:type" content="website">
-<!--    <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">-->
+    <meta property="og:url" content="https://mschreiber68.github.io/mysite/">
     <meta property="og:description" content="Mike Schreiber's Page">
-<!--    <meta property="og:image" content="image.png">-->
+    {% comment %}<meta property="og:image" content="image.png">{% endcomment %}
 
-<!--    <link rel="icon" href="/favicon.ico">-->
-<!--    <link rel="icon" href="/favicon.svg" type="image/svg+xml">-->
-<!--    <link rel="apple-touch-icon" href="/apple-touch-icon.png">-->
+    {% comment %}<link rel="icon" href="/favicon.ico">{% endcomment %}
+    {% comment %}<link rel="icon" href="/favicon.svg" type="image/svg+xml">{% endcomment %}
+    {% comment %}<link rel="apple-touch-icon" href="/apple-touch-icon.png">{% endcomment %}
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
