--- a/_includes/baseLayout.liquid
+++ b/_includes/baseLayout.liquid
@@ -21,12 +21,23 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        {% include styles.css %}
+    </style>
 </head>
 
 <body>
-{{ content }}
+<h1>Mike Schreiber</h1>
+<nav>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/webcomponents">Web Components</a></li>
+    </ul>
+</nav>
+<main>
+    {{ content }}
+</main>
 </body>
 </html>
