--- a/_includes/webComponents/dropdown.liquid
+++ b/_includes/webComponents/dropdown.liquid
@@ -1,6 +1,12 @@
 <script type="module" src="/webcomponents/js/dropdown.js"></script>
 
 <h2>Dropdown</h2>
+<xmp>
+<mike-dropdown>
+    <div slot="trigger">Click here for content</div>
+    <div>Dropdown content</div>
+</mike-dropdown>
+</xmp>
 
 <h3>Unstyled</h3>
 <mike-dropdown>
