--- a/webcomponents.liquid
+++ b/webcomponents.liquid
@@ -3,18 +3,26 @@ layout: baseLayout.liquid
 ---
 
 <p>
-    Lately I've have an interest in Web Components.
+    Lately I've been interested in Web Components.
     My goal is to try and make some Web Components that are:
 </p>
 <ul>
     <li>
         Design system agnostic.
         I think components that are highly styleable are highly reusable.
+        This probably means limiting the use of the shadow DOM.
     </li>
     <li>
         SEO friendly.
-        My thought is that slot-heavy components will allow component content to be readable by search engines.
+        Limited use of template HTML.
     </li>
 </ul>
+<p>
+    These components are a work in progress.
+</p>
 
+
+<hr>
 {% include webComponents/dropdown.liquid %}
+<hr>
+{% include webComponents/tabs.liquid %}
