--- a/webcomponents.liquid
+++ b/webcomponents.liquid
@@ -4,17 +4,12 @@ layout: baseLayout.liquid
 
 <p>
     Lately I have been interested in Web Components.
-</p>
-
-<h2>Building Blocks</h2>
-<p>
-    These components aim to encapsulate the javascript for a general user interaction.
-    They are 100% customizable and styleable.
-    They are most useful as building blocks for more advanced components.
+    Below are toy versions of components that only encapsulate <em>behavior</em>.
+    They can then be 100% styled by the project that uses them.
 </p>
 
 <hr>
-{% include webComponents/toggle.liquid %}
+{% include webComponents/tabs.liquid %}
 
 <hr>
-{% include webComponents/mux.liquid %}
+{% include webComponents/modal.liquid %}
