--- a/webcomponents.liquid
+++ b/webcomponents.liquid
@@ -1,5 +1,5 @@
 ---
-layout: baseLayout.liquid
+layout: templates/baseLayout.liquid
 ---
 
 <p>
@@ -9,7 +9,28 @@ layout: baseLayout.liquid
 </p>
 
 <hr>
-{% include webComponents/tabs.liquid %}
+
+<h3>Tabs</h3>
+
+<x-tabs>
+    <div class="tabRow">
+        <x-tab>Tab 1</x-tab>
+        <x-tab>Tab 2</x-tab>
+        <x-tab>Tab 3</x-tab>
+    </div>
+    <x-tab-panel>Panel 1</x-tab-panel>
+    <x-tab-panel>Panel 2</x-tab-panel>
+    <x-tab-panel>Panel 3</x-tab-panel>
+</x-tabs>
 
 <hr>
-{% include webComponents/modal.liquid %}
+
+<h3>Modal</h3>
+
+<button onclick="document.querySelector('x-modal').active = true">Show Modal</button>
+<x-modal>
+    <x-modal-content>
+        <div>A Modal</div>
+        <x-modal-dismiss>X</x-modal-dismiss>
+    </x-modal-content>
+</x-modal>
