--- a/src/css/site.css
+++ b/src/css/site.css
@@ -1,5 +1,6 @@
 :root {
     --text-color: #444;
+    --primary-color: #336b87;
 }
 
 body {
@@ -8,7 +9,7 @@ body {
     padding: 0 10px;
     font-family: 'Open Sans', sans-serif;
     color: var(--text-color);
-    background: #eee;
+    background: #fff;
 }
 
 a:link, a:visited, a:hover, a:active {
@@ -28,6 +29,11 @@ nav > ul {
     padding: 0;
 }
 
-code {
-    white-space: pre;
+button {
+    cursor: pointer;
+    background-color: var(--primary-color);
+    color: #fff;
+    border: none;
+    padding: 12px;
+    border-radius: 6px;
 }
