--- a/src/css/components/tabs.css
+++ b/src/css/components/tabs.css
@@ -3,14 +3,14 @@ x-tabs .tabRow {
 }
 
 x-tab {
-    border-bottom: 1px solid #ccc;
-    padding: 12px 20px;
+    /*border-bottom: 1px solid #ccc;*/
+    padding: 12px 32px;
     cursor: pointer;
 }
 
 x-tab[selected] {
-    border: 1px solid #ccc;
-    border-bottom: 0;
+    /*border: 1px solid #ccc;*/
+    border-bottom: 3px solid var(--primary-color);
 }
 
 x-tab-panel {
