--- a/src/css/site.css
+++ b/src/css/site.css
@@ -7,7 +7,7 @@ body {
     max-width: 800px;
     margin: 40px auto;
     padding: 0 10px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Verdana, sans-serif;
     color: var(--text-color);
     background: #fff;
 }
@@ -17,21 +17,7 @@ a:link, a:visited, a:hover, a:active {
     text-decoration: none;
 }
 
-nav {
-    border-top: 1px solid var(--text-color);
-    border-bottom: 1px solid var(--text-color);
-}
 
-nav ul {
-    display: flex;
-    gap: 1.5em;
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li:hover {
-   font-weight: bold;
-}
 
 button {
     cursor: pointer;
