--- a/src/templates/baseLayout.html.twig
+++ b/src/templates/baseLayout.html.twig
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-<h1>Mike Schreiber</h1>
+<h1 class="bigScreenHeader">Mike Schreiber</h1>
 
 {% include 'patterns/nav.html.twig' %}
 
