--- a/src/templates/patterns/nav.html.twig
+++ b/src/templates/patterns/nav.html.twig
@@ -1,4 +1,5 @@
 <nav>
+  <h1 class="mobileNavHeader">Mike Schreiber</h1>
   <ul>
     <li><a href="/" title="Home">Home</a></li>
     <li><a href="/webcomponents" title="Web Components">Web Components</a></li>
