--- a/src/css/site.css
+++ b/src/css/site.css
@@ -11,6 +11,9 @@ body {
     font-family: Verdana, sans-serif;
     color: var(--text-color);
     background: #fff;
+
+    /* Prevent scrollbar from shifting layout */
+    padding-left: calc(100vw - 100%);
 }
 
 a:link, a:visited, a:hover, a:active {
