--- a/src/templates/baseLayout.html.twig
+++ b/src/templates/baseLayout.html.twig
@@ -20,13 +20,12 @@
     {% block inlineCss %}{% endblock %}
   </style>
 
+  <script type="module" src="/js/patterns/nav.js"></script>
   {% block js %}{% endblock %}
 
 </head>
 
 <body>
-<h1 class="bigScreenHeader">Mike Schreiber</h1>
-
 {% include 'patterns/nav.html.twig' %}
 
 <main>
