--- a/src/templates/components/tabs.html.twig
+++ b/src/templates/components/tabs.html.twig
@@ -1,4 +1,4 @@
-<x-tabs>
+<x-tabs class="tabsDemo {{ class }}">
   <div class="tabRow">
     {% for tab in tabs %}
       <x-tab>{{ tab.name }}</x-tab>
