--- a/src/templates/pages/index.html.twig
+++ b/src/templates/pages/index.html.twig
@@ -1,4 +1,9 @@
 {% extends 'baseLayout.html.twig' %}
+
+{% block inlineCss %}
+  {% include 'css/home.css' %}
+{% endblock %}
+
 {% block main %}
 <p>Hello.</p>
 {% endblock %}
