--- a/src/templates/pages/webcomponents.html.twig
+++ b/src/templates/pages/webcomponents.html.twig
@@ -39,12 +39,12 @@
 
     <h3 class="demoHeader">Dropdown</h3>
     <x-dropdown class="dropdownDemo">
-        <x-dropdown-toggle class="item">Click for Fruit</x-dropdown-toggle>
+        <x-dropdown-toggle>Click for Fruit</x-dropdown-toggle>
         <x-dropdown-content>
             <ul>
-                <li class="item">Apple</li>
-                <li class="item">Banana</li>
-                <li class="item">Orange</li>
+                <li>Apple</li>
+                <li>Banana</li>
+                <li>Orange</li>
             </ul>
         </x-dropdown-content>
     </x-dropdown>
