--- a/src/templates/baseLayout.html.twig
+++ b/src/templates/baseLayout.html.twig
@@ -18,6 +18,7 @@
     {% block inlineCss %}{% endblock %}
   </style>
 
+  <script type="application/javascript" src="/js/lib/prefixfree.min.js"></script>
   <script type="module" src="/js/patterns/nav.js"></script>
   {% block js %}{% endblock %}
 
