game at least working

--- a/src/templates/pages/games.html.twig
+++ b/src/templates/pages/games.html.twig
@@ -10,5 +10,7 @@
 
 {% block main %}
   <h3>Find the Leprechaun</h3>
+  <div style="width: 320px;">
   <x-huntgame></x-huntgame>
+  </div>
 {% endblock %}
