--- a/src/templates/pages/games.html.twig
+++ b/src/templates/pages/games.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block main %}
-  <h3>Find the Leprechaun</h3>
+  <h3>Hot and Cold</h3>
   <div style="width: 320px;">
   <x-huntgame></x-huntgame>
   </div>
