inline tabs demo

--- a/src/templates/pages/webcomponents.html.twig
+++ b/src/templates/pages/webcomponents.html.twig
@@ -16,16 +16,16 @@
     </p>
 
     <h3 class="demoHeader">Tabs</h3>
-    {% set tabs = [
-        {name: 'Tab 1', content: 'Panel 1'},
-        {name: 'Tab 2', content: 'Panel 2'},
-        {name: 'Tab 3', content: 'Panel 3'},
-    ] %}
-    {% include 'components/tabs.html.twig' with {
-        tabs: tabs,
-        class: 'tabsDemo'
-    } only %}
-
+    <x-tabs class="tabsDemo">
+        <div class="tabRow">
+            <x-tab>Tab 1</x-tab>
+            <x-tab>Tab 2</x-tab>
+            <x-tab>Tab 3</x-tab>
+        </div>
+        <x-tab-panel>Panel 1</x-tab-panel>
+        <x-tab-panel>Panel 2</x-tab-panel>
+        <x-tab-panel>Panel 3</x-tab-panel>
+    </x-tabs>
 
     <h3 class="demoHeader">Modal</h3>
     <button onclick="document.querySelector('x-modal').active = true">Show Modal</button>
@@ -35,7 +35,6 @@
             <x-modal-dismiss>X</x-modal-dismiss>
         </x-modal-content>
     </x-modal>
-
 
     <h3 class="demoHeader">Dropdown</h3>
     <x-dropdown class="dropdownDemo">
