--- a/src/templates/pages/games.html.twig
+++ b/src/templates/pages/games.html.twig
@@ -11,4 +11,7 @@
 {% block main %}
   <h3>Hot and Cold</h3>
   <x-huntgame></x-huntgame>
+
+  <h3>Math Practice</h3>
+  <x-math-practice></x-math-practice>
 {% endblock %}
