--- a/src/scss/_site.scss
+++ b/src/scss/_site.scss
@@ -10,6 +10,7 @@ body {
     font-family: Verdana, sans-serif;
     color: var(--text-color);
     background: #fff;
+    padding-bottom: 60px;
 }
 
 .pageContent {
