--- a/src/templates/pages/mathpractice.html.twig
+++ b/src/templates/pages/mathpractice.html.twig
@@ -9,6 +9,8 @@
 {% endblock %}
 
 {% block main %}
-  <h3>Math Practice</h3>
+  <h3>Math Practice (work in progress)</h3>
   <x-math-practice></x-math-practice>
+  <hr style="margin: 15px">
+  <x-mathrace></x-mathrace>
 {% endblock %}
