add winner dialog

--- a/src/templates/pages/mathpractice.html.twig
+++ b/src/templates/pages/mathpractice.html.twig
@@ -9,6 +9,6 @@
 {% endblock %}
 
 {% block main %}
-  <h3>Math Practice (work in progress)</h3>
+  <h3>Math Practice</h3>
   <x-mathrace></x-mathrace>
 {% endblock %}
