--- a/src/scss/pages/games.scss
+++ b/src/scss/pages/games.scss
@@ -1,2 +1,24 @@
 @use "../_site.scss";
 @use "../patterns/_nav.scss";
+
+.gameContainer {
+    display: flex;
+    gap: 15px;
+    margin: 50px 0;
+
+    .imageContainer {
+        flex: 1;
+    }
+
+    img {
+        height: 250px;
+    }
+
+    .description {
+        flex: 1;
+
+        h3 {
+            margin-top: 0;
+        }
+    }
+}
