add support for subdirs

--- a/src/templates/pages/games.html.twig
+++ b/src/templates/pages/games.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-  <a href="/hotandcold" class="gameContainer">
+  <a href="/games/hotandcold" class="gameContainer">
     <div class="imageContainer">
       <img src="/images/hotandcold.png">
     </div>
@@ -18,7 +18,7 @@
     </div>
   </a>
 
-  <a href="/mathpractice" class="gameContainer">
+  <a href="/games/mathpractice" class="gameContainer">
     <div class="imageContainer">
       <img src="/images/mathpractice.png">
     </div>
