--- a/src/templates/pages/games.html.twig
+++ b/src/templates/pages/games.html.twig
@@ -1,13 +1,13 @@
-{% extends 'baseLayout.html.twig' %}
+{% extends 'base-layout.html.twig' %}
 
 {% block inlineCss %}
   {% include 'css/games.css' %}
 {% endblock %}
 
 {% block main %}
-  <a href="/games/hotandcold" class="gameContainer">
+  <a href="/games/hot-and-cold" class="gameContainer">
     <div class="imageContainer">
-      <img src="/images/hotandcold.png">
+      <img src="/images/hot-and-cold.png">
     </div>
     <div class="description">
       <h3>Hot and Cold</h3>
@@ -18,9 +18,9 @@
     </div>
   </a>
 
-  <a href="/games/mathpractice" class="gameContainer">
+  <a href="/games/math-practice" class="gameContainer">
     <div class="imageContainer">
-      <img src="/images/mathpractice.png">
+      <img src="/images/math-practice.png">
     </div>
     <div class="description">
       <h3>Math Practice</h3>
