--- a/src/templates/pages/games/hot-and-cold.html.twig
+++ b/src/templates/pages/games/hot-and-cold.html.twig
@@ -1,7 +1,7 @@
-{% extends 'baseLayout.html.twig' %}
+{% extends 'base-layout.html.twig' %}
 
 {% block inlineCss %}
-  {% include 'css/hotandcold.css' %}
+  {% include 'css/hot-and-cold.css' %}
 {% endblock %}
 
 {% block js %}
