--- a/src/templates/pages/games/math-practice.html.twig
+++ b/src/templates/pages/games/math-practice.html.twig
@@ -1,7 +1,7 @@
-{% extends 'baseLayout.html.twig' %}
+{% extends 'base-layout.html.twig' %}
 
 {% block inlineCss %}
-  {% include 'css/mathpractice.css' %}
+  {% include 'css/math-practice.css' %}
 {% endblock %}
 
 {% block js %}
