--- a/src/templates/pages/index.html.twig
+++ b/src/templates/pages/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'baseLayout.html.twig' %}
+{% extends 'base-layout.html.twig' %}
 
 {% block inlineCss %}
   {% include 'css/home.css' %}
