--- a/src/templates/pages/webcomponents.html.twig
+++ b/src/templates/pages/webcomponents.html.twig
@@ -1,7 +1,7 @@
-{% extends 'baseLayout.html.twig' %}
+{% extends 'base-layout.html.twig' %}
 
 {% block inlineCss %}
-    {% include 'css/webcomponents.css' %}
+    {% include 'css/web-components.css' %}
 {% endblock %}
 
 {% block js %}
