--- a/src/templates/pages/games/hot-and-cold.html.twig
+++ b/src/templates/pages/games/hot-and-cold.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block js %}
-  <script type="module" src="/js/pages/hotandcold.js"></script>
+  <script type="module" src="/js/pages/hot-and-cold.js"></script>
 {% endblock %}
 
 {% block main %}
