--- a/src/templates/pages/games/math-practice.html.twig
+++ b/src/templates/pages/games/math-practice.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block js %}
-  <script type="module" src="/js/pages/mathpractice.js"></script>
+  <script type="module" src="/js/pages/math-practice.js"></script>
 {% endblock %}
 
 {% block main %}
