--- a/src/templates/pages/web-components.html.twig
+++ b/src/templates/pages/web-components.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block js %}
-    <script type="module" src="/js/pages/webcomponents.js"></script>
+    <script type="module" src="/js/pages/web-components.js"></script>
 {% endblock %}
 
 {% block main %}
