--- a/src/templates/patterns/nav.html.twig
+++ b/src/templates/patterns/nav.html.twig
@@ -1,6 +1,6 @@
 {% set navLinks %}
     <a class="navLink" href="/" title="Home">Home</a>
-    <a class="navLink" href="/webcomponents" title="Web Components">Web Components</a>
+    <a class="navLink" href="/web-components" title="Web Components">Web Components</a>
     <a class="navLink" href="/games" title="Games">Games</a>
 {% endset %}
 
