--- a/src/scss/pages/web-components.scss
+++ b/src/scss/pages/web-components.scss
@@ -1,8 +1,8 @@
 @use "../_site.scss";
 @use "../patterns/_nav.scss";
-@use "../patterns/_tabsDemo.scss";
-@use "../patterns/_modalDemo.scss";
-@use "../patterns/_dropdownDemo.scss";
+@use "../patterns/_tabs-demo.scss";
+@use "../patterns/_modal-demo.scss";
+@use "../patterns/_dropdown-demo.scss";
 
 .demoHeader {
     margin-top: 60px;
