--- a/src/templates/pages/games.html.twig
+++ b/src/templates/pages/games.html.twig
@@ -26,7 +26,7 @@
       <h3>Math Practice</h3>
       <div>
         Practice multiplication and division.
-        Designed by my daughter Elizabeth.
+        Designed by Elizabeth.
       </div>
     </div>
   </a>
