--- a/src/scss/pages/games.scss
+++ b/src/scss/pages/games.scss
@@ -13,6 +13,11 @@
 
     img {
         height: 250px;
+        
+        @media screen and (max-width: 460px) {
+            height: auto;
+            width: 100%;
+        }
     }
 
     .description {
