--- a/src/scss/pages/games.scss
+++ b/src/scss/pages/games.scss
@@ -16,7 +16,7 @@
         
         @media screen and (max-width: 460px) {
             height: auto;
-            width: 100%;
+            width: 90vw;
         }
     }
 
