--- a/src/templates/patterns/nav.html.twig
+++ b/src/templates/patterns/nav.html.twig
@@ -2,6 +2,7 @@
     <a class="navLink" href="/" title="Home">Home</a>
     <a class="navLink" href="/web-components" title="Web Components">Web Components</a>
     <a class="navLink" href="/games" title="Games">Games</a>
+    <a class="navLink" href="/about" title="About">About</a>
 {% endset %}
 
 <div class="globalHeading">
