--- a/src/scss/pages/games.scss
+++ b/src/scss/pages/games.scss
@@ -12,11 +12,12 @@
     }
 
     img {
+
         height: 250px;
         
         @media screen and (max-width: 460px) {
             height: auto;
-            width: 90vw;
+            width: 100%;
         }
     }
 
