use highlightjs for web components page. try out store.js

--- a/src/templates/base-layout.html.twig
+++ b/src/templates/base-layout.html.twig
@@ -21,6 +21,7 @@
   <script type="module" src="/js/patterns/nav.js"></script>
   {% block js %}{% endblock %}
 
+  {% block lib %}{% endblock %}
 </head>
 
 <body>
