--- a/src/scss/pages/web-components.scss
+++ b/src/scss/pages/web-components.scss
@@ -4,6 +4,7 @@
 @use "../patterns/_modal-demo.scss";
 @use "../patterns/_dropdown-demo.scss";
 
-.demoHeader {
-    margin-top: 60px;
+.webComponentLink {
+    display: block;
+    margin: 20px 0;
 }
