add tabs code to tabs page

--- a/src/templates/pages/web-components/tabs.html.twig
+++ b/src/templates/pages/web-components/tabs.html.twig
@@ -28,6 +28,8 @@
 
 {% block main %}
   <h2>Tabs</h2>
+  <h3>Components</h3>
+  <x-code language="javascript">{% include 'components/tabs.js' %}</x-code>
   <h3>Demo</h3>
   <x-code>{{ tabDemo|e }}</x-code>
   <x-code>{% include 'patterns/_tabs-demo.scss' %}</x-code>
