--- a/src/templates/pages/about.html.twig
+++ b/src/templates/pages/about.html.twig
@@ -7,5 +7,8 @@
 {% block main %}
   <p>I should probably put contact info here.</p>
 
+  <h3>About this site</h3>
   <p>Some icons on this site provided by <a class="textLink" href="https://svgrepo.com">SVG Repo</a>.</p>
+
+  <p><a href="https://highlightjs.org/">Highlight.js</a> is used to style code snippets.</p>
 {% endblock %}
